リプライ画面完成

--- a/app/assets/stylesheets/module/post_info_wrapper.scss
+++ b/app/assets/stylesheets/module/post_info_wrapper.scss
@@ -39,6 +39,9 @@
   .post-info-wrapper {
     width: 100%;
     margin: 0 auto;
+    &__hr {
+      width: 100vw;
+    }
   }
   .post-details-wrapper {
     &__post-content {
