--- a/app/assets/stylesheets/module/reply_form.scss
+++ b/app/assets/stylesheets/module/reply_form.scss
@@ -1,35 +1,33 @@
 .reply-form {
-  width: 40vw;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 9fr;
+  width: 60%;
+  margin: 30px auto;
+  text-align: center;
   &__textarea {
-    border: none;
-    outline: none;
     width: 100%;
+    aspect-ratio: 4 / 1;
     padding: 10px;
-    font-size: 2rem;
-  }
-  &__img-input {
-    display: none !important; 
-  }
-  &__img-icon {
-    cursor: pointer;
-  }
-  &__img-preview img{
-    width: 30vw;
-    height: auto;
-    display: block;
-    margin-top: 30px;
+    font-size: 1.5rem;
+    border-radius: 10px;
   }
   &__submit {
-    display: block;
-    margin: 5vh 5vw 0 auto;
-    color: #0F84FF;
-    font-size: 1.5rem;
-    border: 1px solid #0F84FF;
-    border-radius: 20px;
-    padding: 5px 10px;
+    display: inline-block;
+    margin-top: 20px;
+    color: #0255e4;
+    width: 70%;
+    border: 1px solid #0255e4;
+    border-radius: 10px;
+    padding: 20px;
     background-color: #fff;
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .reply-form {
+    width: 100%;
+    &__submit {
+      width: 100%;
+      padding: 5px;
+    }
   }
 }
