--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,19 +18,19 @@
 
 /* shared */
 
-.display-none {
+.display-none, .hide {
   display: none;
 }
-
+.show {
+  display: block;
+}
 .selected-color {
   color: #0F84FF;
 }
-
 .post-action-icon {
   float: right;
   cursor: pointer;
 }
-
 #gray-out {
   position: fixed;
   top: 0;
@@ -39,34 +39,6 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 100;
-}
-
-/* header */
-
-header {
-  .container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 40px;
-  }
-
-  .item {
-    text-align: center;
-  }
-
-  .second-item {
-    margin-left: -60px;
-  }
-
-  .form-group {
-    position: relative;
-  }
-
-  .rounded-input {
-    border-radius: 15px;
-    padding-left: 30px;
-  }
 }
 
 /* signup_form, login_form */
