--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -17,10 +17,7 @@
     <%= @heritage.country.name %>
   </div>
   <div class="heritage-detail-info-inner">
-    <%= image_tag "review_score/score0.png", size: "150x30", class: "heritage-detail-info-inner__score-img" %>
-    <span class="js-score" data-score="<%= calc_average_review_score(@heritage.id) %>">
-      <%= calc_average_review_score(@heritage.id) %>
-    </span>
+    <%= render 'shared/heritage_score', heritage: @heritage %>
     <% if logged_in? %>
       <div class="heritage-detail-btn-block">
         <%= render 'heritages/like_form' %>
@@ -65,35 +62,6 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
-    var scoreElements = document.querySelectorAll('.js-score'); 
-    scoreElements.forEach(function(scoreElement) {
-      var score = scoreElement.dataset.score;
-      var imgElement = scoreElement.previousElementSibling;
-      if (score && imgElement) {
-        if (score >= 0.5 && score < 1) {
-            imgElement.src = "/assets/review_score/score05.png";
-        } else if (score >= 1 && score < 1.5) {
-            imgElement.src = "/assets/review_score/score10.png";
-        } else if (score >= 1.5 && score < 2) {
-            imgElement.src = "/assets/review_score/score15.png";
-        } else if (score >= 2 && score < 2.5) {
-            imgElement.src = "/assets/review_score/score20.png";
-        } else if (score >= 2.5 && score < 3) {
-            imgElement.src = "/assets/review_score/score25.png";
-        } else if (score >= 3 && score < 3.5) {
-            imgElement.src = "/assets/review_score/score30.png";
-        } else if (score >= 3.5 && score < 4) {
-            imgElement.src = "/assets/review_score/score35.png";
-        } else if (score >= 4 && score < 4.5) {
-            imgElement.src = "/assets/review_score/score40.png";
-        } else if (score >= 4.5 && score < 5) {
-            imgElement.src = "/assets/review_score/score45.png";
-        } else if (score == 5) {
-            imgElement.src = "/assets/review_score/score50.png";
-        }
-      }
-    });
-
     // タップされた要素にクラスを追加
     var navItems = document.querySelectorAll('.heritage-link-group li');
     navItems.forEach(item => {
