--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,5 +1,5 @@
 <!--投稿の「・・・」ボタン押下時に表示されるポップアップ-->
-<%= render 'shared/post_action_popup' %>
+<%= render 'popup/post_action_popup' %>
 <div class="heritage-detail-page-wrapper">
   <div class="heritage-info-wrapper">
     <div class="heritage-info-wrapper__heritage-name">
