--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,32 +14,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "module/*";
-@import "base/*";
-
-/* shared */
-
-.display-none, .hide {
-  display: none;
-}
-.show {
-  display: block;
-}
-.selected-color {
-  color: #0F84FF;
-}
-.post-action-icon {
-  float: right;
-  cursor: pointer;
-}
-#gray-out {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  z-index: 100;
-}
+@import "common/*";
 
 /* signup_form, login_form */
 
