--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <div id="gray-out" class="display-none"></div>
+    <div id="gray-out" class="background-gray-out hide"></div>
     <% flash.each do |message_type, message| %>
       <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
