--- a/app/views/shared/_bookmark_list.html.erb
+++ b/app/views/shared/_bookmark_list.html.erb
@@ -11,10 +11,7 @@
         <%= heritage.country.name %>
       </div>
       <div class="profile-heritage-card__review-score">
-        <%= image_tag "review_score/score0.png", size: "100x20" %>
-        <span class="js-score" data-score="<%= calc_average_review_score(heritage.id) %>">
-          <%= calc_average_review_score(heritage.id) %>
-        </span>
+        <%= render 'shared/heritage_score', heritage: heritage %>
       </div>
       <div class="profile-heritage-card__bookmark-img">
         <%= image_tag "bookmark.svg", size: "30x30" %>
@@ -36,10 +33,7 @@
           <%= heritage.country.name %>
         </div>
         <div class="heritage-mobile-card-details__review-score">
-          <%= image_tag "review_score/score0.png", size: "100x20" %>
-          <span class="js-score" data-score="<%= calc_average_review_score(heritage.id) %>">
-            <%= calc_average_review_score(heritage.id) %>
-          </span>
+          <%= render 'shared/heritage_score', heritage: heritage %>
         </div>
         <div class="heritage-card-tags-wrapper">
           <div class="heritage-tag-card">
@@ -66,36 +60,3 @@
     <% end %>
   <% end %>
 </div>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    var scoreElements = document.querySelectorAll('.js-score'); 
-    scoreElements.forEach(function(scoreElement) {
-      var score = scoreElement.dataset.score;
-      var imgElement = scoreElement.previousElementSibling;
-      if (score && imgElement) {
-        if (score >= 0.5 && score < 1) {
-            imgElement.src = "/assets/review_score/score05.png";
-        } else if (score >= 1 && score < 1.5) {
-            imgElement.src = "/assets/review_score/score10.png";
-        } else if (score >= 1.5 && score < 2) {
-            imgElement.src = "/assets/review_score/score15.png";
-        } else if (score >= 2 && score < 2.5) {
-            imgElement.src = "/assets/review_score/score20.png";
-        } else if (score >= 2.5 && score < 3) {
-            imgElement.src = "/assets/review_score/score25.png";
-        } else if (score >= 3 && score < 3.5) {
-            imgElement.src = "/assets/review_score/score30.png";
-        } else if (score >= 3.5 && score < 4) {
-            imgElement.src = "/assets/review_score/score35.png";
-        } else if (score >= 4 && score < 4.5) {
-            imgElement.src = "/assets/review_score/score40.png";
-        } else if (score >= 4.5 && score < 5) {
-            imgElement.src = "/assets/review_score/score45.png";
-        } else if (score == 5) {
-            imgElement.src = "/assets/review_score/score50.png";
-        }
-      }
-    });
-  });
-</script>
