--- a/app/views/shared/_review_create.html.erb
+++ b/app/views/shared/_review_create.html.erb
@@ -22,7 +22,7 @@
         <hr>
         <div class="visible-img-btn">
           <%= image_tag "photo.svg", size: '25x25', id: "img-icon", class: "visible-img-btn__img-icon" %>
-          <span>画像を追加</span>
+          <span>4枚まで</span>
         </div>
         <div id="img-preview" class="review-create-form__img-preview"></div>
         <%= hidden_field_tag :heritage_id, @heritage.id %>
