--- a/app/assets/stylesheets/module/review_create_form.scss
+++ b/app/assets/stylesheets/module/review_create_form.scss
@@ -2,15 +2,12 @@
   display: flex;
   padding: 20px 10px;
   height: 100%;
-
   & form {
     width: 100%;
   }
-
   &__user-icon {
     border-radius: 50%;
   }
-
   &__textarea {
     padding: 0 20px;
     border: none;
@@ -19,16 +16,17 @@
     aspect-ratio: 2 / 1;
     font-size: 2rem;
   }
-
   & input[type="file"] {
     display: none;
   }
-
   &__img-preview {
     display: flex;
     padding: 20px 20px 20px 0;
     gap: 20px;
     overflow-x: auto;
+  }
+  & .star, & .score {
+    font-size: 2.5rem;
   }
 }
 .visible-img-btn {
@@ -53,7 +51,6 @@
     &__textarea {
       font-size: 1.5rem;
       height: 40%;
-
       &__img-preview {
         & img {
           height: 30%;
@@ -61,12 +58,13 @@
         }
       }
     }
+    & .star, & .score {
+      font-size: 2rem;
+    }
   }
-
   .visible-img-btn span {
     font-size: 1.5rem;
   }
-
   .review-form-submit-btn {
     position: fixed;
     bottom: 0;
