--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render 'layouts/header' %>
     <div id="gray-out" class="background-gray-out hide"></div>
     <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <div class="flash-msg alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
     <%= yield %>
   </body>
