未ログイン時の不具合を修正

--- a/app/assets/stylesheets/module/like_and_reply.scss
+++ b/app/assets/stylesheets/module/like_and_reply.scss
@@ -3,7 +3,7 @@
   margin: 20px 0;
   .like {
     display: inline-block;
-    &__count {
+    &__count--color-red {
       color: #EF0D0D;
     }    
   }
