--- a/app/assets/stylesheets/module/user_post_details.scss
+++ b/app/assets/stylesheets/module/user_post_details.scss
@@ -21,6 +21,9 @@
     cursor: pointer;
   }
 }
+.review-score-container {
+  padding-bottom: 10px;
+}
 
 @media (max-width: 767px) {
   .user-post-details {
