--- a/app/assets/stylesheets/module/heritage_detail_info.scss
+++ b/app/assets/stylesheets/module/heritage_detail_info.scss
@@ -14,13 +14,11 @@
   display: flex;
   align-items: center;
   padding-left: 10px;
-  & .score-value {
-    font-size: 2rem;
-    padding-left: 10px;
-  }
-  & .score-img {
-    width: 150px;
-    height: 30px;
+  & .heritage-score-info {
+    &__score-img {
+      width: 150px;
+      height: 30px;
+    }
   }
 }
 .heritage-detail-btn-block {
