--- a/app/assets/stylesheets/module/heritage_detail_info.scss
+++ b/app/assets/stylesheets/module/heritage_detail_info.scss
@@ -41,9 +41,11 @@
     }
   }
   .heritage-detail-info-inner {
-    & .score-img {
-      width: 100px;
-      height: 20px;
+    & .heritage-score-info {
+      &__score-img {
+        width: 100px;
+        height: 20px;
+      }
     }
   }
   .heritage-detail-btn-block {
