--- a/app/assets/stylesheets/module/heritage_link_group.scss
+++ b/app/assets/stylesheets/module/heritage_link_group.scss
@@ -1,8 +1,6 @@
 .heritage-link-group {
   position: relative;
-  padding-top: 20px;
-  width: 60vw;
-  margin: 0 auto;
+  padding: 20px 20vw 0 20vw;
   font-size: 2rem;
   white-space: nowrap;
   & ul {
