--- a/app/views/shared/_like.html.erb
+++ b/app/views/shared/_like.html.erb
@@ -1,6 +1,8 @@
-<% if logged_in? && current_user.review_liked?(review) %>
-  <%= image_tag "heart-red.png", size: "20x20", data: { review_id: review.id }, class: "js-heart-red-icon", remote: true %>
-<% else %>
-  <%= image_tag "like.png", size: "20x20", data: { review_id: review.id }, class: "js-like-icon", remote: true %>
-<% end %>
-<%= content_tag :span, review.likers.count, class: "#{'like__count--color-red' if logged_in? && current_user.review_liked?(review)}" %>
+<div class="like-area">
+  <% if logged_in? && current_user.review_liked?(review) %>
+    <%= image_tag "heart-red.png", size: "20x20", data: { review_id: review.id }, class: "js-heart-red-icon", remote: true %>
+  <% else %>
+    <%= image_tag "like.png", size: "20x20", data: { review_id: review.id }, class: "js-like-icon", remote: true %>
+  <% end %>
+  <%= content_tag :span, review.likers.count, class: "#{'like-area__count--color-red' if logged_in? && current_user.review_liked?(review)}" %>
+</div>
