ログインフォームと会員登録フォーム完成

--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -1,3 +1,12 @@
+<iframe
+  width="600"
+  height="450"
+  style="border:0"
+  loading="lazy"
+  allowfullscreen
+  src="https://www.google.com/maps/embed/v1/streetview?key=AIzaSyCaTriiOQ42k4fd1_pQeYWCjDjIE8F5D4A&location=40.689247,-74.044502&heading=210&pitch=10&fov=35">
+</iframe>
+
 <div class="heritage-img-area">
   <%= image_tag "heritage/マチュピチュ/2.png", class: "heritage-img-area__main-img" %>
   <div class="heritage-img-right-area">
