--- a/app/assets/stylesheets/module/profile_heritage_card.scss
+++ b/app/assets/stylesheets/module/profile_heritage_card.scss
@@ -58,7 +58,7 @@
     width: 100%;
     padding: 15px;
     &__image {
-      flex: 3;
+      width: 30%;
       & img {
         width: 100%;
         aspect-ratio: 1 / 1;
@@ -66,14 +66,15 @@
     }
   }
   .heritage-mobile-card-details {
-    flex: 7;
+    width: 70%;
     padding-left: 10px;
     &__heritage-name {
       font-weight: bold;
       font-size: 1.5rem;
-      white-space: nowrap; 
+      width: 100%;
       overflow: hidden;
-      text-overflow: ellipsis; 
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
     &__country {
       padding-top: 5px;
