--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,19 @@
 <% provide(:title, 'Sign up') %>
 <%= render 'shared/error_messages', object: @user %>
-<div class="user_form">
-  <div class="container">
-    <div class="card">
-      <%= form_with(model: @user) do |f| %>
-        <div class="form-group f-size">
-          <%= f.label :name, "ユーザー名" %>
-          <%= f.text_field :name, class: 'form-control' %>
-        </div>
-
-        <div class="form-group f-size">
-          <%= f.label :email, "メールアドレス" %>
-          <%= f.email_field :email, class: 'form-control' %>
-        </div>
-
-        <div class="form-group f-size">
-          <%= f.label :password, "パスワード" %>
-          <%= f.password_field :password, placeholder: "8~20桁の半角英数字(各1文字以上)", class: 'form-control' %>
-        </div>
-
-        <div class="form-group f-size">
-          <%= f.label :password_confirmation, "パスワード(確認用)" %>
-          <%= f.password_field :password_confirmation, class: 'form-control' %>
-        </div>
-
-        <div class="text-center f-size">
-          <%= f.submit "会員登録", class: "btn btn-primary" %>
-        </div>
-      <% end %>
-    </div>
-  </div>
+<div class="signup-form">
+  <div class="signup-form__form-title">会員登録</div>
+  <%= form_with(model: @user) do |f| %>
+    <%= f.text_field :name, placeholder: "ユーザー名（10文字以内）", class: 'signup-form__user-name' %>
+    <%= f.email_field :email, placeholder: "メールアドレス", class: 'signup-form__email' %>
+    <%= f.password_field :password, placeholder: "パスワード:8~20桁の半角英数字(各1文字以上)", class: 'signup-form__password' %>
+    <%= f.password_field :password_confirmation, placeholder: "パスワード確認欄", class: 'signup-form__password-confirmation' %>
+    <%= f.submit "会員登録", class: "signup-form__submit" %>
+  <% end %>
 </div>
+
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  var body = document.body;
+  document.body.style.backgroundColor = '#efefef';
+});
+</script>
